# diary-quote-service

./: .gitignore  .gitmessage.txt  README.md  a.txt  db.py  main.py  models.py  nonono.txt  pyproject.toml
app/: database.py  db.py  main.py
app/api/: auth.py
app/api/v1/: auth.py  diary.py  frontend.py  questions.py  quote.py
app/core/: auth.py  security.py
app/db/: __init__.py
app/db/migrations/models/: 0_20251208142424_init.py  2_20251209143602_update.py
app/models/: __init__.py  bookmark.py  bookmark_quote.py  diary.py  question.py  quote.py  token_blacklist.py  user.py
app/schemas/: bookmark.py  diary.py  home.py  question.py  quote.py  token_blacklist.py  user.py
app/scraping/: quote_scraper.py
frontend/static/: diaries.js  home.css  home.js  login.css  login.js  signup.css  signup.js  style.css
frontend/static/css/: style.css
frontend/templates/: diaries.html  home.html  login.html  signup.html
migrations/models/: 0_20251210140323_init.py  0_20251210162734_init.py  0_20251211014928_init.py  1_20251208164204_None.py  3_20251209170735_None.py  4_20251209171553_update.py  5_20251210033835_update.py  6_20251210034933_update.py
