[tool.ruff]
# 최대 줄 길이 (black, fastapi 기준 88 또는 100 권장)
line-length = 100

# 검사할 Python 버전
target-version = "py310"

# 어떤 규칙들을 활성화할지
select = ["E", "F", "I"]

# 무시할 규칙
ignore = ["E501"]

# FastAPI 프로젝트에서 자주 제외하는 경로
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[project]
name = "diary-quote-service"
version = "0.1.0"
dependencies = [
    "aerich==0.9.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asyncclick==8.3.0.7",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "click==8.3.1",
    "dictdiffer==0.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.124.0",
    "h11==0.16.0",
    "idna==3.11",
    "passlib==1.7.4",
    "pyasn1==0.6.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "rsa==4.9.1",
    "ruff==0.14.8",
    "six==1.17.0",
    "starlette==0.50.0",
    "tortoise-orm>=0.25.1",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
]
